--- a/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -68,6 +68,8 @@ spec:
                 memory: 8Gi
     defaultPodOptions:
       terminationGracePeriodSeconds: 120
+      nodeSelector:
+        topology.kubernetes.io/zone: worker
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
