--- a/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
@@ -74,6 +74,8 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
         supplementalGroups: [10000]
         seccompProfile: { type: RuntimeDefault }
+      nodeSelector:
+        topology.kubernetes.io/zone: worker
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
