--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -140,6 +140,8 @@ patches:
 
 
 controlPlane:
+  nodeLabels:
+    topology.kubernetes.io/zone: controlPlane
   patches:
     # Cluster configuration
     - |-
@@ -202,3 +204,7 @@ controlPlane:
             enabled: true
             forwardKubeDNSToHost: true
             resolveMemberNames: true
+
+worker:
+  nodeLabels:
+    topology.kubernetes.io/zone: worker
