feat: move flux repos to kubernetes dir

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -144,7 +144,7 @@ spec:
         - name: repo2
           s3: &r2
             bucket: crunchy-pgo
-            endpoint: ${CLUSTER_SECRET_CLOUDFLARE_ACCOUNT_ID}.r2.cloudflarestorage.com
+            endpoint: ${CLOUDFLARE_ACCOUNT_ID}.r2.cloudflarestorage.com
             region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
           schedules:
             full: "30 2 * * 0" # Sunday at 02:30
