--- a/kubernetes/main/flux/repos/kustomization.yaml
+++ b/kubernetes/main/flux/repos/kustomization.yaml
@@ -4,5 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ./cluster.yaml
-  - ./flux.yaml
+  - ./actions-runner-controller.yaml
+  - ./authentik-charts.yaml
+  - ./crunchydata.yaml
+  - ./dragonfly.yaml
+  - ./itzg.yaml
+  - ./rook-ceph.yaml
+  - ./userinit-controller.yaml
