--- a/kubernetes/utility/apps/network/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/cloudflared/app/externalsecret.yaml
@@ -17,8 +17,8 @@ spec:
         credentials.json: |
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
-            "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET_PI }}",
-            "TunnelID": "{{ .CLUSTER_CLOUDFLARE_TUNNEL_ID_PI }}"
+            "TunnelSecret": "{{ .UTILITY_CLOUDFLARE_TUNNEL_SECRET }}",
+            "TunnelID": "${CLOUDFLARE_TUNNEL_ID}"
           }
   dataFrom:
   - extract:
