--- a/kubernetes/utility/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/cloudflared/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
               - --config
               - /etc/cloudflared/config/config.yaml
               - run
-              - "${SECRET_CLOUDFLARE_TUNNEL_ID}"
+              - "${CLOUDFLARE_TUNNEL_ID}"
             probes:
               liveness: &probes
                 enabled: true
