--- a/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
               - --config
               - /etc/cloudflared/config/config.yaml
               - run
-              - "${SECRET_CLOUDFLARE_TUNNEL_ID}"
+              - "${CLOUDFLARE_TUNNEL_ID}"
             probes:
               liveness: &probes
                 enabled: true
