--- a/kubernetes/main/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/unpoller/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               repository: ghcr.io/unpoller/unpoller
               tag: v2.11.2@sha256:73b39c0b3b8fa92aa82a7613d3486253ffbd8c057833b4621402a268159bf2a2
             env:
-              UP_UNIFI_DEFAULT_URL: https://${UNIFI_CONTROLLER_IP}
+              UP_UNIFI_DEFAULT_URL: https://192.168.1.1
               UP_INFLUXDB_DISABLE: true
             envFrom:
               - secretRef:
