--- a/kubernetes/main/flux/config/cluster.yaml
+++ b/kubernetes/main/flux/config/cluster.yaml
@@ -15,6 +15,22 @@ spec:
     /*
     # include kubernetes directory
     !/kubernetes/main
+    !/kubernetes/shared
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-shared
+  namespace: flux-system
+spec:
+  interval: 30m
+  path: ./kubernetes/shared
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -24,6 +40,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
+  dependsOn:
+    - name: cluster-shared
   path: ./kubernetes/main/flux
   prune: true
   wait: false
@@ -38,7 +56,13 @@ spec:
     substituteFrom:
       - name: cluster-settings
         kind: ConfigMap
-        optional: false
+        optional: true
+      - name: cluster-settings-main
+        kind: ConfigMap
+        optional: true
       - name: cluster-secrets
+        kind: Secret
+        optional: true
+      - name: cluster-secrets-main
         kind: Secret
         optional: true
