--- a/kubernetes/shared/repos/kustomization.yaml
+++ b/kubernetes/shared/repos/kustomization.yaml
@@ -4,5 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ./cluster.yaml
-  - ./flux.yaml
+  - ./git
+  - ./helm
+  - ./oci
