feat: migrate gatus to templates

--- a/kubernetes/main/apps/downloads/radarr/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/gatus/guarded
