--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./configmap.yaml
   - ./helmrelease.yaml
   - ../../../../templates/volsync
-  - ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/gatus/guarded
