--- a/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
   - ./configs/config.yaml
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
   - ../../../../templates/volsync
