--- a/kubernetes/main/apps/media/tautulli/app/kustomization.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
   - ../../../../templates/volsync
