--- a/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./grafana-dashboard.yaml
   - ./helmrelease.yaml
   - ./rbac.yaml
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
 configMapGenerator:
   - name: gatus-configmap
     files:
