--- a/kubernetes/main/apps/observability/grafana/app/kustomization.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
