--- a/kubernetes/main/apps/self-hosted/homepage/app/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./rbac.yaml
-  - ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/gatus/guarded
