--- a/kubernetes/utility/apps/flux-system/capacitor/app/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/capacitor/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./rbac.yaml
-  - ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/gatus/guarded
