--- a/kubernetes/utility/apps/home-automation/mosquitto/app/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/mosquitto/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./claim.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/gatus/guarded
 configMapGenerator:
   - name: mosquitto-configmap
     files:
