--- a/kubernetes/utility/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./rbac.yaml
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
 configMapGenerator:
   - name: gatus-configmap
     files:
