--- a/kubernetes/utility/apps/self-hosted/thelounge/app/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/thelounge/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ../../../../templates/volsync
-  - ../../../../templates/gatus/external
+  - ../../../../../shared/templates/gatus/external
