feat: migrate volsync template

--- a/kubernetes/main/apps/downloads/bazarr/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/guarded
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
 configMapGenerator:
   - name: bazarr-scripts
     files:
