--- a/kubernetes/main/apps/games/core-keeper/app/kustomization.yaml
+++ b/kubernetes/main/apps/games/core-keeper/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
