--- a/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./pvc.yaml
   - ./configs/config.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
