--- a/kubernetes/main/apps/media/plex/movie-roulette/kustomization.yaml
+++ b/kubernetes/main/apps/media/plex/movie-roulette/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
