--- a/kubernetes/main/apps/media/tautulli/app/kustomization.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
