--- a/kubernetes/main/apps/downloads/qbittorrent/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/guarded
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
