--- a/kubernetes/main/apps/downloads/sabnzbd/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/guarded
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
