--- a/kubernetes/main/apps/games/minecraft/takocraft/kustomization.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   # - ./dnsendpoint.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
