--- a/kubernetes/main/apps/media/kyoo/app/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
