--- a/kubernetes/main/flux/settings/cluster-settings.yaml
+++ b/kubernetes/main/flux/settings/cluster-settings.yaml
@@ -7,3 +7,7 @@ metadata:
 data:
   ## Main cluster settings
   CLUSTER_NAME: main
+  PVC_VOLSYNC_STORAGECLASS: ceph-block
+  VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
+  VOLSYNC_CACHE_SNAPSHOTCLASS: ceph-block
+  VOLSYNC_STORAGECLASS: ceph-block
