--- a/kubernetes/shared/templates/volsync/claim.yaml
+++ b/kubernetes/shared/templates/volsync/claim.yaml
@@ -14,4 +14,4 @@ spec:
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY:-2Gi}"
-  storageClassName: "${VOLSYNC_STORAGECLASS:-longhorn}"
+  storageClassName: "${PVC_VOLSYNC_STORAGECLASS:-placeholder}"
