--- a/kubernetes/utility/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
