--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
   - ../../../../../shared/templates/gatus/guarded
