--- a/kubernetes/utility/apps/network/headscale/app/kustomization.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ../../../../../shared/templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
