--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - ./configmap.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
   - ../../../../../shared/templates/gatus/guarded
