--- a/kubernetes/utility/apps/self-hosted/thelounge/app/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/thelounge/app/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
   - ../../../../../shared/templates/gatus/external
