--- a/kubernetes/shared/templates/gatus/guarded/configmap.yaml
+++ b/kubernetes/shared/templates/gatus/guarded/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "${APP}-gatus-ep"
+  name: "${APP:-placeholder}-gatus-ep"
   labels:
     gatus.io/enabled: "true"
 data:
