feat: migrate gatus to templates (#3207)
* feat: migrate gatus to templates

* feat: migrate volsync template

* feat: add placeholder

* feat: add blank ks file

* feat: cleanup failed nfs pvc

--- a/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
   - ./configs/config.yaml
-  - ../../../../templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/gatus/external
+  - ../../../../../shared/templates/volsync
