--- a/kubernetes/shared/templates/gatus/kustomization.yaml
+++ b/kubernetes/shared/templates/gatus/kustomization.yaml
@@ -2,8 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./claim.yaml
-  - ./minio.yaml
-  # - ./nfs.yaml
-  - ./r2.yaml
+namespace: flux-system
+resources: []
