--- a/kubernetes/main/apps/downloads/sabnzbd/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/gatus/guarded
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/gatus/guarded
+  - ../../../../../shared/templates/volsync
