--- a/kubernetes/main/apps/media/plex/app/kustomization.yaml
+++ b/kubernetes/main/apps/media/plex/app/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../templates/gatus/external
-  - ../../../../templates/volsync
+  - ../../../../../shared/templates/gatus/external
+  - ../../../../../shared/templates/volsync
