fix: cleanup cluster naming

--- a/kubernetes/main/flux/settings/cluster-settings.yaml
+++ b/kubernetes/main/flux/settings/cluster-settings.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 data:
   ## Main cluster settings
-  CLUSTER_NAME: main
+  CLUSTER: main
   PVC_VOLSYNC_STORAGECLASS: ceph-block
   VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
   VOLSYNC_CACHE_SNAPSHOTCLASS: ceph-block
