--- a/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -115,7 +115,7 @@ spec:
           - memory-snapshot-on-shutdown
           - new-service-discovery-manager
         externalLabels:
-          cluster: ${CLUSTER_NAME}
+          cluster: ${CLUSTER}
         resources:
           requests:
             cpu: 100m
