--- a/kubernetes/utility/flux/config/cluster.yaml
+++ b/kubernetes/utility/flux/config/cluster.yaml
@@ -16,6 +16,8 @@ spec:
     # include kubernetes directory
     !/kubernetes/utility
     !/kubernetes/shared
+    # exclude templates dir
+    /kubernetes/shared/template/*
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
