fix: qbit volsync

--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -22,6 +22,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_ACCESSMODES: ReadWriteMany
+      PVC_VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
 ---
