chore: update group for gatus

--- a/kubernetes/main/apps/observability/gatus/app/config/config.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/config/config.yaml
@@ -25,7 +25,7 @@ connectivity:
     interval: 1m
 endpoints:
   - name: status
-    group: external
+    group: main-external
     url: https://status.${SECRET_DOMAIN}
     interval: 1m
     client:
@@ -33,7 +33,7 @@ endpoints:
     conditions: ["[STATUS] == 200"]
     alerts: [{ type: discord }]
   - name: flux-webhook
-    group: external
+    group: main-external
     url: https://flux-webhook.${SECRET_DOMAIN}
     interval: 1m
     client:
