feat: test out ip addres

--- a/kubernetes/main/apps/observability/exporters/nut-exporter/app/prometheusrule.yaml
+++ b/kubernetes/main/apps/observability/exporters/nut-exporter/app/prometheusrule.yaml
@@ -126,7 +126,7 @@ spec:
           regex: (pod)
       params:
         server:
-          - network-nut.${SECRET_DOMAIN}
+          - ${SVC_NUT_ADDR}
       path: /ups_metrics
       port: metrics
       scheme: http
