--- a/kubernetes/main/apps/observability/network-ups-tools/app/kustomization.yaml
+++ b/kubernetes/main/apps/observability/network-ups-tools/app/kustomization.yaml
@@ -4,12 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helmrelease.yaml
-configMapGenerator:
-  - name: network-ups-tools-config
-    files:
-      - ./config/nut.conf
-      - ./config/ups.conf
-      - ./config/upsd.conf
-      - ./config/upsd.users
-generatorOptions:
-  disableNameSuffixHash: true
+  - prometheusrule.yaml
