--- a/kubernetes/main/apps/observability/exporters/nut-exporter/app/prometheusrule.yaml
+++ b/kubernetes/main/apps/observability/exporters/nut-exporter/app/prometheusrule.yaml
@@ -14,7 +14,7 @@ spec:
             description: NUT Exporter has disappeared from Prometheus target discovery.
             summary: NUT Exporter is down.
           expr: |
-            absent(up{job=~".*network-ups-tools.*"} == 1)
+            absent(up{job=~".*nut-exporter.*"} == 1)
           for: 5m
           labels:
             severity: critical
