--- a/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -52,29 +52,6 @@ spec:
           http:
             port: 3493
             protocol: TCP
-      metrics:
-        enabled: true
-        controller: *app
-        ports:
-          metrics:
-            enabled: true
-            port: 9199
-            protocol: TCP
-    serviceMonitor:
-      app:
-        serviceName: nut-exporter-server
-        endpoints:
-          - port: metrics
-            scheme: http
-            interval: 15s
-            scrapeTimeout: 10s
-            path: /ups_metrics
-            params:
-              target:
-                - localhost:3493
-            relabelings:
-              - sourceLabels: [__param_target]
-                targetLabel: target
     persistence:
       config:
         type: configMap
@@ -96,7 +73,7 @@ spec:
               password = "bacon"
               actions = SET
               instcmds = ALL
-              upsmon primary
+              upsmon master
           ups.conf: |-
             [serverups]
               driver = "usbhid-ups"
@@ -105,7 +82,7 @@ spec:
               vendorid = "09AE"
               productid = "2012"
           upsmon.conf: |-
-            MONITOR ups@localhost:3493 1 upsmon "bacon" primary
+            MONITOR ups@localhost:3493 1 upsmon "bacon" master
             SHUTDOWNCMD "/sbin/shutdown -h +0"
             POWERDOWNFLAG /etc/killpower
             POLLFREQ 15
