--- a/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -57,29 +57,6 @@ spec:
           http:
             port: 3493
             protocol: TCP
-      metrics:
-        enabled: true
-        controller: *app
-        ports:
-          metrics:
-            enabled: true
-            port: 9199
-            protocol: TCP
-    serviceMonitor:
-      app:
-        serviceName: network-ups-tools-metrics
-        endpoints:
-          - port: metrics
-            scheme: http
-            interval: 15s
-            scrapeTimeout: 10s
-            path: /ups_metrics
-            params:
-              target:
-                - localhost:3493
-            relabelings:
-              - sourceLabels: [__param_target]
-                targetLabel: target
     persistence:
       config:
         type: configMap
@@ -101,7 +78,7 @@ spec:
               password = "bacon"
               actions = SET
               instcmds = ALL
-              upsmon primary
+              upsmon master
           ups.conf: |-
             [networkups]
               driver = "usbhid-ups"
@@ -111,7 +88,7 @@ spec:
               productid = "0002"
               serial = "4B2217P19326"
           upsmon.conf: |-
-            MONITOR ups@localhost:3493 1 upsmon "bacon" primary
+            MONITOR ups@localhost:3493 1 upsmon "bacon" master
             SHUTDOWNCMD "/sbin/shutdown -h +0"
             POWERDOWNFLAG /etc/killpower
             POLLFREQ 15
