--- a/kubernetes/utility/apps/observability/network-ups-tools/app/prometheusrule.yaml
+++ b/kubernetes/utility/apps/observability/network-ups-tools/app/prometheusrule.yaml
@@ -9,15 +9,15 @@ spec:
   groups:
     - name: nut-exporter
       rules:
-        - alert: NutExporterAbsent
-          annotations:
-            description: NUT Exporter has disappeared from Prometheus target discovery.
-            summary: NUT Exporter is down.
-          expr: |
-            absent(up{job=~".*network-ups-tools.*"} == 1)
-          for: 5m
-          labels:
-            severity: critical
+        # - alert: NutExporterAbsent
+        #   annotations:
+        #     description: NUT Exporter has disappeared from Prometheus target discovery.
+        #     summary: NUT Exporter is down.
+        #   expr: |
+        #     absent(up{job=~".*network-ups-tools.*"} == 1)
+        #   for: 5m
+        #   labels:
+        #     severity: critical
         - alert: UpsOnBattery
           annotations:
             description: UPS {{ $labels.ups }} has lost power and is running on battery.
