fix: update secret

--- a/kubernetes/main/apps/network/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/main/apps/network/cloudflared/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
             "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "{{ .CLUSTER_CLOUDFLARE_TUNNEL_ID }}"
+            "TunnelID": "${CLOUDFLARE_TUNNEL_ID}"
           }
   dataFrom:
   - extract:
