fix: update cloudflare tunnel secret

--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
       data:
         ## Non Cluster resources
         HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID: "{{ .CLOUDFLARE_ACCOUNT_TAG }}"
-        HOMEPAGE_VAR_CLOUDFLARED_TUNNELID: "{{ .CLUSTER_CLOUDFLARE_TUNNEL_ID }}"
+        HOMEPAGE_VAR_CLOUDFLARED_TUNNELID: "${CLOUDFLARE_TUNNEL_ID}"
         HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN: "{{ .CLOUDFLARE_API_KEY }}"
         HOMEPAGE_VAR_NEXTDNS_ID: "{{ .NEXTDNS_ID }}"
         HOMEPAGE_VAR_NEXTDNS_API: "{{ .NEXTDNS_API }}"
