--- a/kubernetes/main/apps/kube-system/coredns/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-system/coredns/app/helm-values.yaml
@@ -49,6 +49,9 @@ tolerations:
   - key: node-role.kubernetes.io/control-plane
     operator: Exists
     effect: NoSchedule
+  - key: node.kubernetes.io/unschedulable
+    operator: Exists
+    effect: NoSchedule
 topologySpreadConstraints:
   - maxSkew: 1
     topologyKey: kubernetes.io/hostname
