--- a/kubernetes/utility/apps/kube-system/coredns/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/coredns/app/helm-values.yaml
@@ -1,6 +1,6 @@
 ---
 fullnameOverride: coredns
-replicaCount: 1
+replicaCount: 2
 k8sAppLabelOverride: kube-dns
 serviceAccount:
   create: true
@@ -47,6 +47,9 @@ tolerations:
   - key: CriticalAddonsOnly
     operator: Exists
   - key: node-role.kubernetes.io/control-plane
+    operator: Exists
+    effect: NoSchedule
+  - key: node.kubernetes.io/unschedulable
     operator: Exists
     effect: NoSchedule
 topologySpreadConstraints:
