--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,7 +8,6 @@ shopt: [globstar]
 vars:
   CLUSTER: '{{.CLUSTER | default "main"}}'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
-  KUBERNETES_DIR: "{{.ROOT_DIR}}/kubernetes"
 
 env:
   GOPATH: '{{.ROOT_DIR}}/.go'
@@ -32,3 +31,9 @@ tasks:
   default:
     cmd: task --list
     silent: true
+
+  # Ref: https://github.com/go-task/task/issues/608
+  noop:
+    internal: true
+    silent: true
+    cmd: noop() { :; }
