--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -168,16 +168,16 @@ patches:
       files:
         - op: overwrite
           path: /etc/nfsmount.conf
-          permissions: 420
+          permissions: 0o644
           content: |
             [ NFSMount_Global_Options ]
-              nfsvers = 4.2
-              hard = True
-              noatime = True
-              nodiratime = True
-              rsize = 131072
-              wsize = 131072
-              nconnect = 8
+            nfsvers=4.2
+            async=True
+            hard=True
+            nconnect=16
+            noatime=True
+            rsize=1048576
+            wsize=1048576
 
   # Disable search domain everywhere
   - |-
@@ -211,11 +211,15 @@ patches:
   - |-
     machine:
       sysctls:
-        fs.inotify.max_queued_events: "65536"
-        fs.inotify.max_user_watches: "524288"
-        fs.inotify.max_user_instances: "8192"
-        net.core.rmem_max: "7500000"
-        net.core.wmem_max: "7500000"
+        fs.inotify.max_user_watches: 1048576
+        fs.inotify.max_user_instances: 8192
+        net.core.netdev_max_backlog: 30000
+        net.core.rmem_max: 67108864
+        net.core.wmem_max: 67108864
+        net.ipv4.tcp_rmem: 4096 87380 33554432
+        net.ipv4.tcp_wmem: 4096 65536 33554432
+        net.ipv4.tcp_tw_reuse: 1
+        net.ipv4.tcp_window_scaling: 1
 
   # Mount openebs-hostpath in kubelet
   - |-
