chore(yaskfile): small improvements to kubernetes tasks

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -22,6 +22,39 @@ tasks:
     preconditions:
       - test -f {{.CLUSTER_DIR}}/apps/{{.PATH}}/ks.yaml
 
+  browse-pvc:
+    desc: Mount a PVC to an temp container [CLUSTER=main] [NS=default] [CLAIM=required]
+    interactive: true
+    cmd: kubectl browse-pvc --namespace {{.NS}} --image docker.io/library/alpine:latest {{.CLAIM}}
+    vars:
+      NS: '{{.NS | default "default"}}'
+    requires:
+      vars: [CLUSTER, CLAIM]
+    preconditions:
+      - kubectl --namespace {{.NS}} get persistentvolumeclaims {{.CLAIM}}
+
+  sync-secrets:
+    desc: Sync all ExternalSecrets [CLUSTER=main]
+    cmds:
+      - for: { var: SECRETS, split: "\n" }
+        cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{.TS}}" --overwrite
+    vars:
+      TS: '{{now | unixEpoch}}'
+      SECRETS:
+        sh: kubectl get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
+    requires:
+      vars: [CLUSTER]
+
+  delete-failed-pods:
+    desc: Delete pods with a Failed/Pending/Succeeded phase [CLUSTER=main]
+    cmds:
+      - for:
+          matrix:
+            PHASE: [Failed, Pending, Succeeded]
+        cmd: kubectl delete pods --field-selector status.phase={{.ITEM.PHASE}} -A --ignore-not-found=true
+    requires:
+      vars: [CLUSTER]
+
   reconcile:
     desc: Force update Flux to pull in changes from your Git repository
     cmd: flux reconcile -n flux-system kustomization cluster --with-source
@@ -33,37 +66,5 @@ tasks:
     cmds:
       - kubectl get hr --all-namespaces | grep False | awk '{print $2, $1}' | xargs -L1 bash -c 'flux suspend hr $0 -n $1'
       - kubectl get hr --all-namespaces | grep False | awk '{print $2, $1}' | xargs -L1 bash -c 'flux resume hr $0 -n $1'
-    requires:
-      vars: [CLUSTER]
-
-  browse-pvc:
-    desc: Mount PVC to an temp container for browsing [CLUSTER=main] [NS=default] [CLAIM=required]
-    interactive: true
-    cmd: kubectl browse-pvc --namespace {{.NS}} --image docker.io/library/alpine:latest {{.CLAIM}}
-    vars:
-      NS: '{{.NS | default "default"}}'
-    requires:
-      vars: [CLUSTER, CLAIM]
-    preconditions:
-      - kubectl --namespace {{.NS}} get persistentvolumeclaims {{.CLAIM}}
-
-  delete-failed-pods:
-    desc: Delete pods in all namespaces with a Failed/Pending/Succeeded phase [CLUSTER=main]
-    cmds:
-      - for:
-          matrix:
-            PHASE: [Failed, Pending, Succeeded]
-        cmd: kubectl delete pods --field-selector status.phase={{.ITEM.PHASE}} -A --ignore-not-found=true
-    requires:
-      vars: [CLUSTER]
-
-  sync-secrets:
-    desc: Sync all ExternalSecrets [CLUSTER=main]
-    cmds:
-      - for: { var: SECRETS, split: "\n" }
-        cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{now | unixEpoch}}" --overwrite
-    vars:
-      SECRETS:
-        sh: kubectl get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
     requires:
       vars: [CLUSTER]
