--- a/kubernetes/utility/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/utility/bootstrap/apps/helmfile.yaml
@@ -1,17 +1,23 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
+
+# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
+kubeVersion: v1.31.2
+
 helmDefaults:
+  force: true
+  recreatePods: true
+  timeout: 600
   wait: true
   waitForJobs: true
-  timeout: 600
-  recreatePods: true
-  force: true
 
 repositories:
   - name: cilium
     url: https://helm.cilium.io
+
   - name: coredns
     url: https://coredns.github.io/helm
+
   - name: postfinance
     url: https://postfinance.github.io/kubelet-csr-approver
 
@@ -20,30 +26,25 @@ releases:
     namespace: observability
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
     version: 16.0.0
+
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.3
-    values:
-      - ../apps/kube-system/cilium/app/helm-values.yaml
-    needs:
-      - observability/prometheus-operator-crds
+    values: ["../../apps/kube-system/cilium/app/helm-values.yaml"]
+    needs: ["observability/prometheus-operator-crds"]
+
   - name: coredns
     namespace: kube-system
     chart: coredns/coredns
     version: 1.36.1
-    values:
-      - ../apps/kube-system/coredns/app/helm-values.yaml
-    needs:
-      - observability/prometheus-operator-crds
-      - kube-system/cilium
+    values: ["../../apps/kube-system/coredns/app/helm-values.yaml"]
+    needs: ["kube-system/cilium"]
+
   - name: kubelet-csr-approver
     namespace: kube-system
     chart: postfinance/kubelet-csr-approver
     version: 1.2.3
-    values:
-      - ../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
-    needs:
-      - observability/prometheus-operator-crds
-      - kube-system/cilium
-      - kube-system/coredns
+    values: ["../../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
+    needs: ["kube-system/coredns"]
+
