fix: clean up dependencies

--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: volsync
   path: ./kubernetes/main/apps/downloads/qbittorrent/app
   prune: true
   sourceRef:
@@ -37,6 +39,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: qbittorrent
   path: ./kubernetes/main/apps/downloads/qbittorrent/tools
   prune: true
   sourceRef:
