--- a/kubernetes/main/apps/self-hosted/paperless/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/ks.yaml
@@ -14,6 +14,7 @@ spec:
     - name: crunchy-postgres-stores
     - name: dragonfly-cluster
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/self-hosted/paperless/app
   prune: true
   sourceRef:
