--- a/kubernetes/main/apps/downloads/bazarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/ks.yaml
@@ -14,6 +14,7 @@ spec:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/downloads/bazarr/app
   prune: true
   sourceRef:
