--- a/kubernetes/main/apps/downloads/recyclarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/ks.yaml
@@ -14,6 +14,7 @@ spec:
     - name: radarr
     - name: sonarr
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/downloads/recyclarr/app
   prune: true
   sourceRef:
