--- a/kubernetes/main/apps/media/komga/ks.yaml
+++ b/kubernetes/main/apps/media/komga/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: volsync
   path: ./kubernetes/main/apps/media/komga/app
   prune: true
   sourceRef:
