--- a/kubernetes/main/apps/media/plex/ks.yaml
+++ b/kubernetes/main/apps/media/plex/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/media/plex/app
   prune: true
   sourceRef:
@@ -43,6 +44,7 @@ spec:
     - name: radarr
     - name: sonarr
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/media/plex/kometa
   prune: true
   sourceRef:
