--- a/kubernetes/main/apps/media/wizarr/ks.yaml
+++ b/kubernetes/main/apps/media/wizarr/ks.yaml
@@ -13,6 +13,7 @@ spec:
   dependsOn:
     - name: plex
     - name: overseerr
+    - name: volsync
   path: ./kubernetes/main/apps/media/wizarr/app
   prune: true
   sourceRef:
