--- a/kubernetes/main/apps/media/your-spotify/ks.yaml
+++ b/kubernetes/main/apps/media/your-spotify/ks.yaml
@@ -10,6 +10,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/media/your-spotify/app
   prune: true
   sourceRef:
