--- a/kubernetes/main/apps/self-hosted/actual/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/actual/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: volsync
   path: ./kubernetes/main/apps/self-hosted/actual/app
   prune: true
   sourceRef:
