--- a/kubernetes/main/apps/self-hosted/atuin/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/atuin/ks.yaml
@@ -13,6 +13,8 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
+    - name: external-secrets-stores
+
   path: ./kubernetes/main/apps/self-hosted/atuin/app
   prune: true
   sourceRef:
