--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/utility/apps/home-automation/zigbee2mqtt/app
   prune: true
   sourceRef:
