--- a/kubernetes/utility/apps/self-hosted/meshcentral/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: volsync
   path: ./kubernetes/utility/apps/self-hosted/meshcentral/app
   prune: true
   sourceRef:
