--- a/kubernetes/utility/apps/self-hosted/rss-forwarder/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/rss-forwarder/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
   path: ./kubernetes/utility/apps/self-hosted/rss-forwarder/app
   prune: true
   sourceRef:
